style.css
@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,600;0,700;0,800;0,900;1,400;1,600;1,700;1,800;1,900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Courier+Prime:wght@700&display=swap");
html,
body {
    color: var(--txt);
    background-color: var(--back);
    overflow-x: hidden;
    overflow-y: auto;
    padding: 0;
    margin: 0;
    /*height: 100%;*/
    font-size: 16px;
    font-family: 'Nunito Sans', sans-serif;
    line-height: 1.1;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

body {
    overflow-y: hidden;
    padding-left: calc(100vw - 100%);
}

main {
    max-width: 924px;
    margin: 0 auto;
    padding: 0 3vw;
    display: grid;
    gap: 0 1em;
    grid-template-rows: auto;
    grid-template-columns: minmax(180px, 1fr) minmax(180px, 1fr) 350px;
    grid-template-areas: "title title twitter" "head head head" "faq faq faq" "start start start" "gameover gameover gameover" "timechoice timechoice news" "col1 col2 news";
}

.mob {
    display: none;
}

.desk {
    display: inherit;
}

@media (max-width: 900px) {
    main {
        grid-template-columns: 1fr 350px;
        grid-template-areas: "title twitter" "head head" "gameover gameover" "faq faq" "start start" "timechoice news" "col1 news" "col2 news";
    }
}

@media (max-width: 750px) {
    main {
        grid-template-columns: 1fr 1fr;
    }
}

@media (max-width: 600px) {
    .mob {
        display: inherit;
    }
    .desk {
        display: none;
    }
    main {
        max-width: 450px;
        grid-template-rows: auto;
        grid-template-columns: 1fr;
        grid-template-areas: "title" "twitter" "start" "news" "timechoice" "col1" "col2" "faq" "gameover";
    }
}

p {
    margin-top: 0;
    margin-bottom: 1rem;
}

.d-none {
    display: none!important;
}

#title {
    grid-area: title;
}

#twitter {
    grid-area: twitter;
}

#head {
    margin-top: .15em;
    grid-area: head;
}

#start {
    grid-area: start;
}

#timechoice {
    grid-area: timechoice;
}

#col1 {
    grid-area: col1;
}

#col2 {
    grid-area: col2;
}

#news {
    grid-area: news;
    min-width: 0;
}

#faq {
    grid-area: faq;
}

h1 {
    font-weight: 900;
    text-align: left;
    font-family: 'Nunito Sans', sans-serif;
    line-height: 1.1;
    font-size: 2.2em;
    margin: 20px 0 5px;
}

b {
    display: block;
    font-weight: 800;
    font-size: 1.05em;
    margin: 1em 0 .4em;
}

#choice {
    margin-top: .4em;
}

#choice b {
    margin: 0 0 .2em;
}

#toggles {
    -webkit-transition: opacity .5s, -webkit-filter .5s;
    transition: opacity .5s, -webkit-filter .5s;
    transition: opacity .5s, filter .5s;
    transition: opacity .5s, filter .5s, -webkit-filter .5s;
    margin-top: -.6em;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-content: flex-start;
    align-items: flex-start;
}

#toggles .flex {
    flex: 1 1 230px;
    align-self: auto;
}

#toggles .flex:nth-child(1) {
    padding-right: .4em;
}

#toggles .flex:nth-child(2) {
    padding-left: .4em;
}

.freeze {
    opacity: .4;
    -webkit-filter: blur(0.75px);
    filter: blur(0.75px);
}

#choice .row,
#toggles .row {
    margin-top: .3em;
    padding: 0 10px;
}

#choice .col-lg-4,
#toggles .col-lg-4 {
    padding: 0 5px;
}

#twitter {
    margin: calc(20px + 0.5em) 0 5px;
    text-align: right;
    font-size: 1.1em;
    color: var(--light-txt);
    font-weight: 700;
}

#faqbtn,
#colormode {
    padding-right: .5em;
}

.fa-moon {
    font-size: .93em;
}

#twitter a {
    color: var(--light-txt);
}

#twitter a:hover {
    text-decoration: none;
    color: var(--dark-txt);
}

#head p {
    margin-top: -.15em;
}

p {
    font-size: 1em;
    margin-bottom: .5em;
}

.container {
    width: 100%;
    height: 100%;
}

@-webkit-keyframes swipe {
    from {
        max-height: 0;
        opacity: 0;
    }
    to {
        max-height: 7em;
        opacity: 100%;
    }
}

@keyframes swipe {
    from {
        max-height: 0;
        opacity: 0;
    }
    to {
        max-height: 7em;
        opacity: 100%;
    }
}

a {
    font-weight: 700;
    text-decoration: none;
    background-color: transparent;
}

.statbtns {
    display: grid;
    gap: 0 5px;
    grid-template-rows: 1fr;
    grid-template-columns: repeat(3, 1fr);
}

.choice {
    -webkit-animation: swipe .2s;
    animation: swipe .2s;
}

.choice a {
    margin-right: .45em;
}

#pinned {
    padding-right: .25em;
    -webkit-animation: none;
    animation: none;
    margin: 1em 0 .6em;
}

.box {
    border: 2px solid var(--border);
    line-height: 1.1;
    background-color: var(--box);
    margin-top: .4em;
    margin-bottom: .8em;
    padding: .6em;
    overflow: none;
    /* width: 100%; */
    border-radius: .6em;
    text-align: left;
    max-height: 50em;
}

.box:not(#chartbox) {
    -webkit-animation-name: swipe;
    animation-name: swipe;
    -webkit-animation-duration: .2s;
    animation-duration: .2s;
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
}


/* 
@keyframes hide {
    from {
        width: 100%;
        max-height: 30em;
        margin: 0 .8em;
        padding: .6em;
        opacity: 100%;
    }
    to {
        width: 100%;
        max-height: 0;
        margin: 0 .8em;
        padding: .6em .6em 0 .6em;
        -webkit-box-shadow: none;
        box-shadow: none;
        opacity: 0%
    }
} */


/* .embox {
    display: none;
    height: 0;
    max-height: 0;
    display: flex;
    align-items: center;
    background-color: var(--box);
    margin-bottom: 0 1em;
    padding: .6em .6em 0 .6em;
    overflow: none;
    width: 100%;
    border-radius: .6em;
    text-align: left;
    animation-name: hide;
    animation-duration: .2s;
    opacity: 0%;
} */
/* ... */

